# state_machine

./: CMakeLists.txt  LICENSE  README.adoc
Examples/: demo.c
Src/: fsm.c  fsm.h
